--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "~3.2.0",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "zeroclipboard": "v1.3.5"
   }
 }
