--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,6 @@
     "bootstrap": "~3.2.0",
     "jquery": "~2.1.1",
     "zeroclipboard": "v1.3.5",
-    "magnific-popup": "~0.9.9",
-    "flexslider": "*"
+    "magnific-popup": "~0.9.9"
   }
 }
