--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "NewSite",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
+  "name"    : "Roadmunk Marketing Website",
+  "version" : "1.0.0",
+  "private" : true,
   "dependencies": {
-    "body-parser": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "debug": "~0.7.4",
-    "ejs": "~0.8.5",
-    "express": "~4.2.0",
-    "less": "^1.7.3",
-    "less-middleware": "1.0.x",
-    "limits": "0.0.3",
-    "morgan": "~1.0.0",
-    "static-favicon": "~1.0.0"
+    "body-parser"     : "~1.0.0",
+    "cookie-parser"   : "~1.0.1",
+    "debug"           : "~0.7.4",
+    "ejs"             : "~0.8.5",
+    "express"         : "~4.2.0",
+    "less"            : "^1.7.3",
+    "less-middleware" : "1.0.x",
+    "limits"          : "0.0.3",
+    "morgan"          : "~1.0.0",
+    "static-favicon"  : "~1.0.0"
   }
 }
