Trying to get heroku testing site working again

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name"    : "Roadmunk Marketing Website",
+  "name"    : "RoadmunkMarketingWebsite",
   "version" : "1.0.0",
   "private" : true,
+  "scripts": {
+     "start": "node server.js"
+  },
   "dependencies": {
     "body-parser"     : "~1.0.0",
     "cookie-parser"   : "~1.0.1",
