--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name"    : "RoadmunkMarketingWebsite",
-  "version" : "1.0.0",
-  "private" : true,
+  "name": "RoadmunkMarketingWebsite",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
-     "start": "node server.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "body-parser"     : "~1.0.0",
-    "cookie-parser"   : "~1.0.1",
-    "debug"           : "~0.7.4",
-    "ejs"             : "~0.8.5",
-    "express"         : "~4.2.0",
-    "less"            : "^1.7.3",
-    "less-middleware" : "1.0.x",
-    "limits"          : "0.0.3",
-    "morgan"          : "~1.0.0",
-    "static-favicon"  : "~1.0.0"
+    "body-parser": "~1.0.0",
+    "cookie-parser": "~1.0.1",
+    "debug": "~0.7.4",
+    "ejs": "~0.8.5",
+    "express": "~4.2.0",
+    "less": "^1.7.3",
+    "less-middleware": "1.0.x",
+    "limits": "0.0.3",
+    "lodash": "^2.4.1",
+    "morgan": "~1.0.0",
+    "static-favicon": "~1.0.0",
+    "string": "^1.9.0"
   }
 }
