--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "bootstrap": "~3.2.0",
     "jquery": "~2.1.1",
-    "zeroclipboard": "v1.3.5",
+    "zeroclipboard": "~1.3.x",
     "magnific-popup": "~0.9.9"
   }
 }
