--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "less-middleware": "1.0.x",
     "limits": "0.0.3",
     "lodash": "^2.4.1",
+    "mailchimp-api": "^2.0.6",
     "morgan": "~1.0.0",
     "static-favicon": "~1.0.0",
     "string": "^1.9.0"
