--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "bootstrap": "~3.2.0",
     "jquery": "~2.1.1",
     "zeroclipboard": "~1.3.x",
-    "magnific-popup": "~0.9.9"
+    "magnific-popup": "~0.9.9",
+    "slick.js": "~1.3.7"
   }
 }
